--- a/css/custom.css
+++ b/css/custom.css
@@ -1,8 +1,8 @@
-body{
+/*body{
 	padding-top: 51px;
 }
 
-/* ng-cloak */
+ ng-cloak 
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng.ng-cloak {
     display: none;
 }
@@ -53,21 +53,28 @@ background-color: #F5F5F5;
 .navbar {
 	border-radius: 0;
 	
-/*background: #438EB9;
-color: #fff;border: 0;*/
+background: #438EB9;
+color: #fff;border: 0;
 
 }
-/* Removed width:auto from navbar-collapse classs; */
+ Removed width:auto from navbar-collapse classs; 
 .navbar-collapse {
 border-top: 0;
 box-shadow: none;
 }
 .navbar .navbar-brand {
-/*color: #FFF;
+color: #FFF;
 font-size: 24px;
 text-shadow: none;
-padding-bottom: 10px;*/
+padding-bottom: 10px;
 }
 .form-group-addon{
 	padding-left: -20px;
-}
+}*/
+
+
+@import url('http://cdnjs.cloudflare.com/ajax/libs/select2/3.4.8/select2.css');
+@import url('http://cdnjs.cloudflare.com/ajax/libs/select2/3.4.8/select2-bootstrap.css');
+/*@import url('http://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.3.0/css/datepicker.min.css');
+@import url('//cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/css/jasny-bootstrap.min.css');                                    
+.timepicker-picker .table-condensed td{text-align:center} */
