Implemented menu items Projects, Organisations, Partners, Budget(Project Budget) . Some forms cannot insert or update data

--- a/partials/currency/currency-list.html
+++ b/partials/currency/currency-list.html
@@ -9,6 +9,7 @@
         <table class="table table-striped table-bordered">
             <thead>
                 <th>Currency Name&nbsp;</th>
+                <th>Action&nbsp;</th>
             </thead>
             <tbody>
                 <tr ng-repeat="data in currencies">
