--- a/partials/authority/authority-list.html
+++ b/partials/authority/authority-list.html
@@ -9,6 +9,7 @@
         <table class="table table-striped table-bordered">
             <thead>
                 <th>Authority Name&nbsp;</th>
+                <th>Action&nbsp;</th>
             </thead>
             <tbody>
                 <tr ng-repeat="data in authoritys">
